fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@
     font-weight: 400;
     color: rgba(0, 0, 0, 0.500);
 }
-.plant-section,{
+.plant-section{
     margin-top: 70px;
     padding: 10px 30px;
 
